 * Fixed bug; When downloading variant data, the given Variant_On_Transcripts
   effectid had been overwritten in the file by the Variants_On_Genome effectid.
 * Added gene symbol as a new column to the variant views on the Individual and
   Screening detailed views.
 * Fixed bug; Editing a transcript entry didn't update the "Last edited by" and
   "Date last edited" fields.


/**************************
 * 3.0 Build 13 (r546)
 * 2015-03-23
 *********/
 * Fixed bug; Given parent IDs were not properly checked during import.
 * Updated the manual; added detail on installation requirements,  and clarified
   that some extra fields during import are now optional.
 * Fixed bug; Importing a file with phenotype or screening data without a given
   individual ID, caused a fatal query error instead of an error message.
 * Legend of a form field is available in data entry forms. Legend can now be
   viewed in via help icons.
 * Option added in the submission process to add a variant to a screening for
   when a submitter returned to the individual, or when the submission process
   is interrupted and continued through "Unfinished Submissions".
 * Fixed bug; When deleting all variants and associated data of a gene,
   deleting phenotypes while no individuals were found caused an error.
 * Fixed bug; Solved bug with finding the proper path elements due to spaces in
   the LOVD installation path.
 * Added info table which explains the effect of deleting a gene.
 * Fixed bug; When genes overlap, the protein change prediction predicted by the
   variant mapper was sometimes incorrect.
 * Fixed typo in the data importer.
 * Fixed bug; Fixed fatal error when a user submits an individual with variants
   for which is he both curator and submitter.
 * Fixed bug; Diseases could not be linked to a big number of genes (hundreds).
 * Fixed bug; The ORCID integration during user registration had to be updated
   due to a discontinued service.