@@ -12,7 +12,10 @@ php:
 
 sudo: required
 before_script:
-  - ./trunk/tests/travis/before_script.sh
+  - ./trunk/tests/bash_scripts/setup_apache.sh
+  - ./trunk/tests/bash_scripts/setup_selenium_server.sh
+  - ./trunk/tests/bash_scripts/start_selenium_server.sh
+##  - ./trunk/tests/travis/before_script.sh
 ##  - ./trunk/tests/bash_scripts/convert_selenium_to_phpunit.sh
 script: "vendor/bin/phpunit --verbose --debug ./trunk/tests/phpunit_selenium/tempTest.php"
 ##script: "vendor/bin/phpunit --verbose --log-junit ./trunk/tests/test_results/reports/testlog_temp.xml ./trunk/tests/phpunit_selenium/tempTest.php"
