@@ -2,9 +2,9 @@
     "require-dev": {
         "phpunit/phpunit-selenium": ">=1.2",
         "phpunit/phpunit": "4.7.*",
-        "php": ">=5.3.3",
         "sebastian/comparator": "~1.0",
         "phpunit/php-invoker": "*",
-        "phpunit/dbunit": ">=1.2"
+        "phpunit/dbunit": ">=1.2",
+        "phpunit/PHPUnit_Story": "1.0.*"
     }
 }
